Quorum3/Library/Tests/Templating/Fail/PassNumberTakesBoolean_5.quorum
class main
    action Main
        Test<boolean> something
        something:doSomething(7.5)
    end
end